--- a/public/tests/index.html
+++ b/public/tests/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-    <link rel="stylesheet" href="..\views/styles.scss" />																						<!-- Mocha -->
+    <link rel="stylesheet" href="/mocha.css" />
 		
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	
@@ -18,10 +18,7 @@
 	</div>
 	<script src="chai.js"></script>
     <script src="mocha.js"></script>
-	
-	<script src="../main.js"></script>
-	<script src="../tokens.js"></script>
-	<script src="../parse.js"></script>
+	<script src="main.js"></script>
 	
     <script>mocha.setup('tdd')</script>
     <script src="tests.js"></script>
