--- a/public/tests/index.html
+++ b/public/tests/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
     <link rel="stylesheet" href="mocha.css" />
+	<link rel="stylesheet" href="tests.css" />	
 		
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	
@@ -34,6 +35,5 @@
 		</nav>
 	  </p>		
 	</div>
-
   </body>
 </html>
